* array.c (rb_ary_diff, rb_ary_uniq):   Enhance documentation for array uniqueness   Based on a patch by Robin Dupret   [Bug #6872] [ruby-core:47209]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36965 b2dd03c8-39d4-4d8f-98ff-823fe69b080e